Closed Bug 872331 Opened 11 years ago Closed 11 years ago

Assertion failure: conversion != MToDouble::NumbersOnly && conversion != MToDouble::NonNullNonStringPrimitives, at ion/Lowering.cpp:1395

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla25
Tracking Status
firefox24 --- affected

People

(Reporter: decoder, Assigned: bhackett1024)

Details

(Keywords: assertion, testcase, Whiteboard: [jsbugmon:update,testComment=4,origRev=4e5983de6e3b])

Attachments

(2 files, 2 obsolete files)

The following testcase asserts on mozilla-central revision 81dd97739fa1 (run with --ion-eager):


var msPerYear =  31536000000;
function IgnoreDaylightSaving(t) {
  msPerYear <= t && t < 2*msPerYear && !DST_1971
}
addTestCase( (new Date()).valueOf() );
addTestCase( undefined );
function addTestCase( t ) {
  IgnoreDaylightSaving(null);
  IgnoreDaylightSaving(t+1);
}
Attachment #749598 - Attachment is obsolete: true
Whiteboard: [jsbugmon:update,bisect]
Whiteboard: [jsbugmon:update,bisect] → [jsbugmon:update,ignore]
JSBugMon: The testcase found in this bug no longer reproduces (tried revision bd9a40076aa6).
JSBugMon: Bisection requested, failed due to error (try manually).
New test for revision 4e5983de6e3b:


DaylightSavingTA((new Date()).valueOf())
function DaylightSavingTA(t) {
  if (t >= undefined) {}
}
SetFullYear();
SetFullYear();
function SetFullYear() {
  DaylightSavingTA((undefined, null));
}
Whiteboard: [jsbugmon:update,ignore] → [jsbugmon:update,bisect,testComment=4,origRev=4e5983de6e3b]
Simpler testcase, without Date and the serial-expression comma:

function d(t) {
  if (t >= undefined) {}
}
function s() {
  d(null);
}
d(3);
s();
s();
Whiteboard: [jsbugmon:update,bisect,testComment=4,origRev=4e5983de6e3b] → [jsbugmon:update,testComment=4,origRev=4e5983de6e3b]
JSBugMon: Bisection requested, result:
autoBisect shows this is probably related to the following changeset:

The first bad revision is:
changeset:   http://hg.mozilla.org/mozilla-central/rev/909360229cff
user:        Brian Hackett
date:        Mon Apr 29 13:10:00 2013 -0600
summary:     Bug 865431 - Restrict Compare_Double and related comparisons to inputs where they will produce the correct result, r=jandem.

This iteration took 142.047 seconds to run.
needinfo? from Brian per comment 6.
Flags: needinfo?(bhackett1024)
Attached patch patchSplinter Review
Somehow I thought checking for MIRType_Null wasn't necessary here, but I don't remember why.
Assignee: general → bhackett1024
Attachment #766462 - Flags: review?(jdemooij)
Flags: needinfo?(bhackett1024)
Attachment #766462 - Flags: review?(jdemooij) → review+
https://hg.mozilla.org/mozilla-central/rev/7a57827dc0a2
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Attachment #764063 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: