Bug 872331 - Box null inputs to MToDouble when necessary, r=jandem.