js/src/ion/TypePolicy.cpp
@@ -191,8 +191,11 @@ ComparePolicy::adjustInputs(MInstruction *def)
                 convert = MToDouble::NonNullNonStringPrimitives;
             else if (compare->compareType() == MCompare::Compare_DoubleMaybeCoerceRHS && i == 1)
                 convert = MToDouble::NonNullNonStringPrimitives;
-            if (convert == MToDouble::NumbersOnly && in->type() == MIRType_Boolean)
+            if (in->type() == MIRType_Null ||
+                (in->type() == MIRType_Boolean && convert == MToDouble::NumbersOnly))
+            {
                 in = boxAt(def, in);
+            }
             replace = MToDouble::New(in, convert);
             break;
           }
