js/src/jit-test/tests/ion/bug872331.js
@@ -1,0 +1,10 @@
+
+function d(t) {
+  if (t >= undefined) {}
+}
+function s() {
+  d(null);
+}
+d(3);
+s();
+s();
